rename DB field encrypted_message to encrypted_text change response json object for messages add sequalize encryption_type validatio update swagger documentation
