# src/controllers/messages/getMessages.ts
@@ -4,7 +4,7 @@ import { AuthenticatedRequest } from '../../types';
 
 export const getMessages = async (req: AuthenticatedRequest, res: Response) => {
   try {
-    const userId = req.user?.id;
+    const userId = req.user!.id;
     const messagesData = await Message.findAll({
       where: {
         user_id: userId,
@@ -12,9 +12,9 @@ export const getMessages = async (req: AuthenticatedRequest, res: Response) => {
     });
     const messages = messagesData.map((message) => ({
       id: message.id,
-      encryptedMessage: message.encrypted_message.toString(),
+      text: message.encrypted_text.toString(),
     }));
-    res.status(200).json(messages);
+    res.status(200).json({ messages });
   } catch (error) {
     console.error(error);
     res.status(500).json({ error: 'Internal Server Error' });
