# src/models/Message.ts
@@ -5,9 +5,9 @@ import { User } from './User';
 interface MessageAttributes {
   id: number;
   user_id: number;
-  encrypted_message: Buffer;
+  encrypted_text: Buffer;
   encryption_key: string;
-  encryption_type: string;
+  encryption_type: 'cesar' | 'xor';
 }
 
 interface MessageCreationAttributes extends Optional<MessageAttributes, 'id'> {}
@@ -18,9 +18,9 @@ class Message
 {
   public id!: number;
   public user_id!: number;
-  public encrypted_message!: Buffer;
+  public encrypted_text!: Buffer;
   public encryption_key!: string;
-  public encryption_type!: string;
+  public encryption_type!: 'cesar' | 'xor';
 }
 
 Message.init(
@@ -42,7 +42,7 @@ Message.init(
         notEmpty: true,
       },
     },
-    encrypted_message: {
+    encrypted_text: {
       type: DataTypes.BLOB,
       allowNull: false,
       validate: {
@@ -64,6 +64,7 @@ Message.init(
       validate: {
         notNull: true,
         notEmpty: true,
+        isIn: [['cesar', 'xor']],
       },
     },
   },
@@ -77,60 +78,3 @@ Message.init(
 );
 
 export { Message };
-// export const Message = sequelize.define(
-//   'Message',
-//   {
-//     id: {
-//       type: DataTypes.INTEGER,
-//       primaryKey: true,
-//       autoIncrement: true,
-//     },
-//     user_id: {
-//       type: DataTypes.INTEGER,
-//       allowNull: false,
-//       references: {
-//         model: User,
-//         key: 'id',
-//       },
-//       validate: {
-//         notNull: true,
-//         notEmpty: true,
-//       },
-//     },
-//     encrypted_message: {
-//       type: DataTypes.TEXT,
-//       allowNull: false,
-//       validate: {
-//         notNull: true,
-//         notEmpty: true,
-//       },
-//     },
-//     encryption_key: {
-//       type: DataTypes.STRING,
-//       allowNull: false,
-//       validate: {
-//         notNull: true,
-//         notEmpty: true,
-//       },
-//     },
-//     encryption_type: {
-//       type: DataTypes.STRING,
-//       allowNull: false,
-//       validate: {
-//         notNull: true,
-//         notEmpty: true,
-//       },
-//     },
-//     created_at: {
-//       type: DataTypes.DATE,
-//       defaultValue: DataTypes.NOW,
-//       allowNull: false,
-//     },
-//   },
-//   {
-//     timestamps: true,
-//     underscored: true,
-//     modelName: 'Message',
-//     tableName: 'messages',
-//   }
-// );
